~fix tap-to-pause on mobile by making the RSVP display clickable

--- a/style.less
+++ b/style.less
@@ -120,6 +120,7 @@ body {
   width: 100%;
   top: 32%;
   left: 0;
+  z-index: 1000;
 }
 .rsvp-wrapper {
   border-top: 1px solid #ccc;
